--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -32,6 +32,8 @@ module:
   datetime: 0
   datetime_range: 0
   dblog: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   embed: 0
@@ -111,6 +113,8 @@ module:
   robotstxt: 0
   scheduler: 0
   scheduler_content_moderation_integration: 0
+  search_api: 0
+  search_api_solr: 0
   seckit: 0
   security_review: 0
   serialization: 0
